syntax = "proto3";

message Lease {
  string tmId = 1;
  repeated string leasedResources = 2;
}

message LeaseList { repeated Lease leases = 1; }

